--- a/entrevistas/pato.html
+++ b/entrevistas/pato.html
@@ -20,7 +20,7 @@
 <!-- <a href="http://localhost:3000/menu.html" class="bottomright-button"><span>← volver</span></a> -->
 
 
-<div id="creditos">Hecho en Temuko, Wallmapu — Proyecto financiado por MINCAP @&nbsp;2021 	¶</div>
+<div id="creditos">Deriva del Libro <sup>0</sup> @ 2022</div>
 
 
 <canvas style="width: 100%; height: 100vh; margin-bottom:6rem;mix-blend-mode: darken;" id="myCanvas" width="400px" height="400px"></canvas>
