--- a/entrevistas/paz.html
+++ b/entrevistas/paz.html
@@ -15,7 +15,7 @@
 <div class="border"></div>
   <a class="btn-inicio" href="../index.html#open-modal">g*ddl</a>
 <!-- <a href="http://localhost:3000/menu.html" class="bottomright-button"><span>← volver</span></a> -->
-<div id="creditos">Hecho en Temuko, Wallmapu — Proyecto financiado por MINCAP @&nbsp;2021 	¶</div>
+<div id="creditos">Deriva del Libro <sup>0</sup> @ 2022</div>
 
 
 
