--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
 
-<div id="creditos">Deriva del Libro @ 2022</div>
+<div id="creditos">Deriva del Libro <sup>0</sup> @ 2022</div>
 
 <div class="customCursor"></div>
 
@@ -68,7 +68,6 @@ Cuando el humano delega capacidades a las máquinas ¿también lo hereda los obj
   <li><a href="entrevistas/pablo.html">Pablo Ayenao</a></li>
 </ul>
 
-<img id="fondart" src="assets/fondart-1.jpg">
 
 <!--
 	    <p>hay libros que definen el campo<br/>
