--- a/entrevistas/pablo.html
+++ b/entrevistas/pablo.html
@@ -15,7 +15,7 @@
 <div class="border"></div>
   <a class="btn-inicio" href="../index.html#open-modal">g*ddl</a>
 <!-- <a href="menu.html" class="bottomright-button"><span>← volver</span></a> -->
-<div id="creditos">Revista de reflexión y experimentación multimedia</div>
+<div id="creditos">Deriva del Libro <sup>0</sup> @ 2022</div>
 
 
 
