--- a/entrevistas/patogu.html
+++ b/entrevistas/patogu.html
@@ -19,7 +19,7 @@
 <!-- <a href="http://localhost:3000/menu.html" class="bottomright-button"><span>← volver</span></a> -->
 
 
-<div id="creditos">Hecho en Temuko, Wallmapu — Proyecto financiado por MINCAP @&nbsp;2021 	¶</div>
+<div id="creditos">Deriva del Libro <sup>0</sup> @ 2022</div>
 
 
 
