--- a/entrevistas/volpi.html
+++ b/entrevistas/volpi.html
@@ -19,7 +19,7 @@
 <!-- <a href="menu.html" class="bottomright-button"><span>← volver</span></a> -->
 
 
-<div id="creditos">Revista de reflexión y experimentación multimedia — Hecho en Temuko, Wallmapu</div>
+<div id="creditos">Deriva del Libro <sup>0</sup> @ 2022</div>
 
 
 
