--- a/entrevistas/francke.html
+++ b/entrevistas/francke.html
@@ -116,18 +116,25 @@ padding: 0 4rem;" class="small-12 cell">
       </div>
     </div>
 
-    <hr />
-
-    <div class="grid-container container-footer">
-      <div class="grid-x">
-        <div class="small-12 medium-6 cell">
-          <p class="small">* Cristian Francke es Narrador oral, parte de la Compañía Cuentos Mestizos Temuco.</small>
-          </p>
-        </div>
-      </div>
+<footer>
+<hr/>
+<div class="grid-container container-footer">
+  <div class="grid-x align-bottom">
+    <div class="small-10 small-offset-1 medium-5 medium-offset-0 cell">
+      <h6>Grafo / Deriva del Libro<sup>0</sup></h6>
+      <p class="small">Los libros son a la memoria,<br/>
+      lo que la música es al sonido.</p>
+      <p class="small">Diálogos y reflexiones en torno a la naturaleza &#8596; tecnología del libro. </p>
+      <p class="tinyfooter">Revista digital de reflexión <br/>& experimentación multimedia.</p>
     </div>
+    <div class="small-6 small-offset-1 medium-5 medium-offset-2 cell">
+      <img id="logo-fondart" src="img/fondart-white.png" alt="">
+    </div>
+  </div>
+</div>
+<hr/>
+</footer>
 
-    <hr />
 
 
 
