--- a/entrevistas/karen.html
+++ b/entrevistas/karen.html
@@ -54,9 +54,9 @@ padding: 0 4rem;" class="small-12 cell">
 
         <p>Entonces ahí se van configurando entre las temporalidades y las memorias. Y claro, sonó bien, porque tenía todo un hilo conductor por detrás. Muchas veces los escritores van con la idea de, no sé, “quiero que aparezca un pájaro porque en el poema dice que hay un pájaro”, y no, con tantos símbolos que podemos incorporar: fotocopiemos una pluma, o intervengamos y empastemos, por ejemplo. La imagen tiene poder, hay una poética detrás que me interesa siempre relevar en el ejercicio visual.</p>
 
-        <p class="pregunta">¿Cómo ves el mundo de las editoriales acá en Temuko?</p>
+        <p class="pregunta">¿Cómo ves el mundo de las editoriales acá en Temuco?</p>
 
-        <p>Hace poco conocí el trabajo del académico Claudio Maldonado. Increíblemente, y para el conocimiento de él, el mundo editorial está en un momento, y sobre todo aquí en la comuna de Temuko. Se está saliendo, descentralizándose un poco del contexto de Santiago como gran polo. Debe ser también por un contexto de pandemia, me comentaba. El proceso creativo se instala como una necesidad, tanto de escritor_s como de l_s artesan_s del libro, por así decirlo, porque la mayoría está funcionando como una especie de plataforma para el espacio de la poesía dentro de l_s jóvenes, lo que también es una necesidad dentro del contexto regional, una cosa que está imbricada y hay mucha en la región.</p>
+        <p>Hace poco conocí el trabajo del académico Claudio Maldonado. Increíblemente, y para el conocimiento de él, el mundo editorial está en un momento, y sobre todo aquí en la comuna de Temuco. Se está saliendo, descentralizándose un poco del contexto de Santiago como gran polo. Debe ser también por un contexto de pandemia, me comentaba. El proceso creativo se instala como una necesidad, tanto de escritor_s como de l_s artesan_s del libro, por así decirlo, porque la mayoría está funcionando como una especie de plataforma para el espacio de la poesía dentro de l_s jóvenes, lo que también es una necesidad dentro del contexto regional, una cosa que está imbricada y hay mucha en la región.</p>
 
         <p class="pregunta">¿Tendrá que ver también con Internet?</p>
 
