--- a/entrevistas/pablo.html
+++ b/entrevistas/pablo.html
@@ -123,7 +123,7 @@
 
         <p>Las lecturas en los bares son entretenidas porque como que nadie te pesca, eso me gusta. La gente se va a fumar un cigarro afuera y quedan l_s poetas leyendo sol_s, lo encuentro divertido. Lo entiendo, porque yo igual lo hago. Porque cuando voy a un bar y hay música en vivo yo igual salgo, y entro después.</p>
 
-        <p class="pregunta">¿Hay un mito de la Araucanía o Temuko, territorio, ciudad de poetas? ¿lo ves?</p>
+        <p class="pregunta">¿Hay un mito de la Araucanía o Temuco, territorio, ciudad de poetas? ¿lo ves?</p>
 
         <p>Como que hay muchas ciudades que se dicen ser ciudades de poetas, en todos los países. Creo que somos distintos y parecidos a otros territorios. Cada territorio tiene sus propias batallas. En este sentido la literatura nunca es desideologizada, siempre de alguna forma u otra te va a espejar, no sé si los dolores, pero si lo que acontece en un pueblo o una región. </p>
 
@@ -131,7 +131,7 @@
 
         <p>Pero también, no sé, tú ves en Inglaterra, la literatura poscolonial que se hace allá, que básicamente es un poco lo mismo, porque hablan también de invasiones, de territorios, de migraciones. En Estados Unidos, que uno dice ¿qué tendrán que decir al respecto? pero hay escritores que tratan las tensiones interétnicas. O sea, la identidad territorial y el poder es un tema super universal.</p>
 
-        <p class="size-2">Uno dice ¿qué tiene que ver Shakespeare con Temuko?, y es cosa que uno lea <i>El Rey Lear</i>, <i>Ricardo III</i>, o cosas más actuales como <i>Medida por medida</i>. Shakespeare habla del poder, cómo se manifiesta, cómo se lucha, los entresijos que tiene, y eso es algo reuniversal también. Yo creo que un buen escritor es capaz de penetrar el corazón humano, donde esté ese corazón. Por ejemplo, me gusta mucho la literatura japonesa ¿pero qué tiene que ver Japón con Temuko? Bueno, yo creo que tienen harto que ver, no sé bien en qué, pero tiene que haber algo que de alguna forma crea esas conexiones con esas escrituras. </p>
+        <p class="size-2">Uno dice ¿qué tiene que ver Shakespeare con Temuco?, y es cosa que uno lea <i>El Rey Lear</i>, <i>Ricardo III</i>, o cosas más actuales como <i>Medida por medida</i>. Shakespeare habla del poder, cómo se manifiesta, cómo se lucha, los entresijos que tiene, y eso es algo reuniversal también. Yo creo que un buen escritor es capaz de penetrar el corazón humano, donde esté ese corazón. Por ejemplo, me gusta mucho la literatura japonesa ¿pero qué tiene que ver Japón con Temuco? Bueno, yo creo que tienen harto que ver, no sé bien en qué, pero tiene que haber algo que de alguna forma crea esas conexiones con esas escrituras. </p>
 
         <p class="pregunta">¿Qué piensas sobre el ejercicio de la lectura?</p>
 
