--- a/entrevistas/volpi.html
+++ b/entrevistas/volpi.html
@@ -91,9 +91,7 @@
     </div>
   </div>
 
-    <div class="small-12 cell">
-      <img style="min-width:100%;" src="img/volpiperfo_6.gif">
-    </div>
+      <img style="min-width:100%;scale: 2; position: absolute;" src="img/volpiperfo_6.png">
 
   <div class="grid-x">
     <div class="small-9 small-offset-1 cell">
@@ -115,7 +113,7 @@
 
       <p>Siento que específicamente los celulares, ese dispositivo, es un lugar del que hay que intentar escapar, porque te atrapa. En ese sentido, la inteligencia, el control, igual de alguna manera quiere que no estemos en estos espacios de diálogo, de cuestionamiento. Gana si tu estas en la pantalla del teléfono, metido en el <i>insta</i>. Entonces creo que el libro es una resistencia y un escape a esos regímenes de control del teléfono, del tiempo que estas leyendo en el celu. Si igual podrías estar leyendo eso en, no sé, un diario, o en una revista, si fuese tal vez fácil poder acceder ella, en un diseño bacán, que fuera atractiva. Tan atractiva como lo es la pantalla. Y fácil, porque tienes el teléfono, tocas la pantalla  y empiezas a leer imágenes y videos. No tienes ni que moverte para salir a buscar esa revista, o ese libro. Una accesibilidad a contenidos gráficos visuales muy fácil desde el teléfono. Todo eso ya está ahí, editoriales, diarios y cuestiones análogas van cerrando y van pasando al espacio digital. O librerías que no tienen librería física pero sí digital, puedes ver el catálogo y lo compras online. </p>
 
-      <p>Todo esto porque el mundo hoy día está ya así. Cada vez más tendiente a una desmaterialización, o en internet. Pero no todo es eso, no todo el mundo es eso. Igual hay que resistirse a esa idea, igual es un régimen. Por eso en Temuko, en este territorio Mapuche, sería bueno cachar que se está haciendo en torno al libro. El Mapudungun es un idioma que se está escribiendo hace relativamente poco de manera más masiva y sistematizada, entonces ya ahí se han producido libros. Entonces sería bueno cachar como una sociedad que se está planteando la recuperación territorial, la autonomía, siento que sería interesante saber que se está pensando en esos espacios en torno al libro. Al libro como espacio, como soporte, que también carga con toda una herencia occidental, europea, pero donde también hoy día ya hay libros en mapudungun. Esto para mí acá, desde este territorio, es muy relevante. Pensar que ahí también pueden aparecer nuevas lecturas o nuevos sentidos de lo que puede llegar a ser un libro. </p>
+      <p>Todo esto porque el mundo hoy día está ya así. Cada vez más tendiente a una desmaterialización, o en internet. Pero no todo es eso, no todo el mundo es eso. Igual hay que resistirse a esa idea, igual es un régimen. Por eso en Temuco, en este territorio Mapuche, sería bueno cachar que se está haciendo en torno al libro. El Mapudungun es un idioma que se está escribiendo hace relativamente poco de manera más masiva y sistematizada, entonces ya ahí se han producido libros. Entonces sería bueno cachar como una sociedad que se está planteando la recuperación territorial, la autonomía, siento que sería interesante saber que se está pensando en esos espacios en torno al libro. Al libro como espacio, como soporte, que también carga con toda una herencia occidental, europea, pero donde también hoy día ya hay libros en mapudungun. Esto para mí acá, desde este territorio, es muy relevante. Pensar que ahí también pueden aparecer nuevas lecturas o nuevos sentidos de lo que puede llegar a ser un libro. </p>
 
       <p class="pregunta">¿Y sobre la poesía? ¿Cómo ves la poesía en este espacio hiperdigitalizado?</p>
 
