--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Cuando el humano delega capacidades a las máquinas ¿también lo hereda los obj
   <li><a href="entrevistas/pato.html">Patricio Alvarado</a></li>
   <li><a href="entrevistas/volpi.html">Jorge Volpi</a></li>
   <li><a href="entrevistas/karen.html">Karen Wyss Paillalef</a></li>
-  <li><a href="entrevistas/patogu.html">Patricio Gutierrez</a></li>
+  <li><a href="entrevistas/patogu.html">Patricio Gutiérrez</a></li>
   <li><a href="entrevistas/paz.html">María Compás</a></li>
   <li><a href="entrevistas/francke.html">Cristian Francke</a></li>
   <li><a href="entrevistas/pablo.html">Pablo Ayenao</a></li>
