--- a/entrevistas/patogu.html
+++ b/entrevistas/patogu.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maritza Diéguez — Deriva del Libro</title>
+    <title>Patricio Gutiérrez — Deriva del Libro</title>
     <link rel="stylesheet" href="css/app.css">
     <link href=" https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css " rel="stylesheet">
   </head>
@@ -102,7 +102,24 @@
 </div>
 
 
+<footer>
 <hr/>
+<div class="grid-container container-footer">
+  <div class="grid-x align-bottom">
+    <div class="small-10 small-offset-1 medium-5 medium-offset-0 cell">
+      <h6>Grafo / Deriva del Libro<sup>0</sup></h6>
+      <p class="small">Los libros son a la memoria,<br/>
+      lo que la música es al sonido.</p>
+      <p class="small">Diálogos y derivas en torno a la naturaleza &#8596; tecnología del libro. </p>
+      <p class="tinyfooter">Revista digital de reflexión <br/>& experimentación multimedia.</p>
+    </div>
+    <div class="small-6 small-offset-1 medium-5 medium-offset-2 cell">
+      <img id="logo-fondart" src="img/fondart-white.png" alt="">
+    </div>
+  </div>
+</div>
+<hr/>
+</footer>
 
 
 
